kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smboard-ingress
  annotations:
    # HTTP를 HTTPS로 자동 리다이렉트 (Nginx 컨트롤러 기본값이나 명시적 설정 가능)
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-http2: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.miniboard.com
      secretName: tlssecret  
  rules:
    - host: www.miniboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 80
